# midi_to_freq

./: README.md  midi_to_freq_code_gen.py
example/: CMakeLists.txt  main.c
